Fling controller notifies the client after fling cancellation.

Android relies on getting the notification when a fling cancels/stops.
This cl calls client_->DidStopFlinging() in input_router_impl which
used to get called after a DidStopFlinging message from renderer.

Bug: 808587
Test: FlingControllerTest.ControllerNotifiesTheClientAfterFlingStart
Change-Id: Icfd7966c19b8f4c770163bb4973548ddc50b35dc
Reviewed-on: https://chromium-review.googlesource.com/907412
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535147}