content/browser/renderer_host/input/input_router_impl.h
@@ -83,6 +83,7 @@ class CONTENT_EXPORT InputRouterImpl
   void ProgressFling(base::TimeTicks current_time) override;
   void StopFling() override;
   bool FlingCancellationIsDeferred() override;
+  void DidStopFlingingOnBrowser() override;
 
   // InputHandlerHost impl
   void CancelTouchTimeout() override;
