content/browser/renderer_host/input/legacy_input_router_impl.h
@@ -79,6 +79,7 @@ class CONTENT_EXPORT LegacyInputRouterImpl
   void ProgressFling(base::TimeTicks current_time) override;
   void StopFling() override;
   bool FlingCancellationIsDeferred() override;
+  void DidStopFlingingOnBrowser() override;
 
   // IPC::Listener
   bool OnMessageReceived(const IPC::Message& message) override;
