content/browser/renderer_host/input/gesture_event_queue_unittest.cc
@@ -112,6 +112,7 @@ class GestureEventQueueTest : public testing::Test,
   void SendGeneratedGestureScrollEvents(
       const GestureEventWithLatencyInfo& gesture_event) override {}
   void SetNeedsBeginFrameForFlingProgress() override {}
+  void DidStopFlingingOnBrowser() override {}
 
  protected:
   static GestureEventQueue::Config DefaultConfig() {
